--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           </div>
           <div class="col-md-6 mt-4 order-md-first mt-md-0">
             <div class="my profile">
-              <p class="text-gray mb-1">Hey , It is me ,</p>
+              <p class="text-gray mb-1">Hello , It is me ,</p>
               <h1 class="text-white fs-1 fw-bold">Nwet Mon Aye</h1>
-              <h2 class="text-white fs-1 fw-bold">Junior Web Developer</h2>
+              <h2 class="text-white fs-1 fw-bold">Junior Software Developer</h2>
               <p class="mt-4 text-gray">
                 I'm currently working as a Junior Web Developer at Local IT
                 Company. And then trying to build my own business projects.So, I
